# fin_flutter

./: ._last_files  .gitignore  CHANGELOG.md  CLAUDE.md  ERRORS.md  IREC2026_improvement_plan.md  LICENSE  README.md  README_fabricacion.md  TASK.md  Team207_CFD_Mesh_Section.docx  Team207_ITBA_Extended_Abstract_2026IREC.docx  Team207_ITBA_Presentation_2026IREC.pptx  analysis_options.yaml  flutterEstimate.py  flutterEstimate_v2.py  flutterEstimate_v3.py  flutterEstimate_v4.py  inplaneG.py  inplaneG_v2.py  inplaneG_v5.py  lam.json  layup_viewer_v5.html  pubspec.yaml
assets/atmosphere/: isa_atmosphere.json
assets/materials/: material_database.json
core/cpp/: CMakeLists.txt
core/cpp/include/fin_flutter/: pipeline.hpp
core/cpp/include/fin_flutter/aeroelastic/: aeroelastic_coupler.hpp  flutter_solver.hpp
core/cpp/include/fin_flutter/cfd/: biot_savart.hpp  vortex_lattice.hpp
core/cpp/include/fin_flutter/fea/: eigenvalue_solver.hpp
core/cpp/include/fin_flutter/materials/: clt_calculator.hpp  orthotropic_ply.hpp
core/cpp/include/fin_flutter/math/: constants.hpp  types.hpp  vec3.hpp
core/cpp/include/fin_flutter/models/: fin_geometry.hpp  flight_condition.hpp
core/cpp/tests/: CMakeLists.txt  test_main.cpp
docs/: ._user_guide.md  INSTALL.md  api_reference.md  architecture.md  contributing.md  test_cases.md  theory.md  user_guide.md
last_files/: ._layup_viewer_v5.html  CHANGELOG.md  flutterEstimate_v3.py  inplaneG_v5.py  laminate.json
lib/: app.dart  main.dart
lib/models/: project.dart  (+1 more)
v1/: flight_data.csv  inplaneG_v5.py
v2/: ULTRAPLAN-MATLAB.md
(+108 files in other folders)
